--- a/index.ipynb
+++ b/index.ipynb
@@ -35,17 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "def exp_pdf(mu, x):\n",
-    "    pass\n",
+    "    decay_rate = 1 / mu\n",
+    "    return decay_rate * np.exp(-decay_rate * x)\n",
     "    \n",
     "def exp_cdf(mu, x):\n",
-    "    pass"
+    "    decay_rate = 1 / mu\n",
+    "    return 1 - np.exp(-decay_rate * x)"
    ]
   },
   {
@@ -61,11 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7442708400868994"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "exp_cdf(22, 30)\n",
     " # Expected Output: 0.7442708400868994"
    ]
   },
@@ -80,11 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00958241148834099"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "exp_pdf(44, 38)\n",
     "# Expected Output: 0.00958241148834099"
    ]
   },
@@ -99,11 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7364028618842733"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "exp_cdf(6,8)\n",
     "# Expected Output: 0.7364028618842733"
    ]
   },
@@ -118,11 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05210775245981355"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "exp_pdf(8,7)\n",
     "# Expected Output: 0.05210775245981355"
    ]
   },
@@ -139,12 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of earthquake before 5 weeks: 51.045834044304684%\n",
+      "Probability of earthquake before 8 weeks: 68.10934426760295%\n",
+      "Probability of earthquake between 5 - 8 weeks: 17.063510223298273%\n"
+     ]
+    }
+   ],
    "source": [
-    "lower_bound = None\n",
-    "upper_bound  = None\n",
+    "lower_bound = exp_cdf(7,5)\n",
+    "upper_bound  = exp_cdf(7,8)\n",
     "\n",
     "print(\"Probability of earthquake before 5 weeks: {}%\".format(lower_bound * 100))\n",
     "print(\"Probability of earthquake before 8 weeks: {}%\".format(upper_bound * 100))\n",
@@ -169,9 +225,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
